updated cve-2024-47177 code review

--- a/_posts/2025-04-28-ep6.md
+++ b/_posts/2025-04-28-ep6.md
@@ -1,5 +1,5 @@
 ---
-title: 'Case Study - CVE-2024-47177 - Code Review Part 1'
+title: 'Case Study - CVE-2024-47177 - Code Review and Exploitation'
 date: 2025-04-28
 permalink: /posts/2025/04/cve-2024-47177-part-1/
 tags:
@@ -59,4 +59,115 @@ It seems to be performing some checks on the packet received by `cups-browsed`, 
 These checks might be important, because they define what would be considered a legit printer.
 
 We will look deeper into the code tomorrow!
+
+---
+
+## May 11th, 2025 Update - more code review and a bit of environment setup for exploitation!
+
+
+## `process_browse_data`
+- Receives packet
+- set end of packet to \0
+- if `recv` failed, then print error
+- check if packet is allowed - using allow()
+
+---
+
+What does `allowed()` check?
+
+Let's assume the configuration file is empty, which is by default.
+
+This means:
+- `browseallow_all` is set to 1
+- `browse_order` is set to `ORDER_DENY_ALLOW`
+ - IF `browse_order` is `ORDER_DENY_ALLOW`, `server_allowed` is set to `TRUE`
+
+With these assumptions, let's follow the for loop.
+ - FOR loop first iteration:
+	 - Sets `sense` to `ALLOW_DENY`. According to the comment, we're dealing with `BrowseDeny` lines first.
+	 - IF `browsedeny_all`  is `TRUE`, and `sense` is `ALLOW_DENY`, then set `server_allowed` to `FALSE`.
+	- continue to the next iteration immediately
+- FOR loop second iteration:
+	- Sets `sense` to `ALOW_ALLOW`
+	- IF `browsedeny_all` is `TRUE` and `sense` is `ALLOW_ALLOW`, then set `server_allowed` to `TRUE`.
+	- Continue to the next iteration.
+	- Except there's no next iteration.
+	- loop TERMINATES.
+- `server_allowed` is RETURNED as `TRUE`.
+
+**Conclusion:** When configuration file is empty, any packet received is allowed!
+
+Alright - let's keep going.
+
+After checking with `allowed()`, we check the packet format using `sscanf`, and if formatted correctly, then we extract the info and location field from the packet.
+
+According the evilsocket's blog, this parsing mechanism caused bugs that allow DoS attacks. It has its own CVE [here](https://nvd.nist.gov/vuln/detail/CVE-2024-47850).
+
+This other CVE won't be my focus for now, due to my absolute lack of knowledge when it comes to binary exploitation. I might revisit it in the future.
+
+Let's look at `found_cups_printer` and progress towards our RCE vulnerability.
+
+## `found_cups_printer`
+
+- Parsing the URI with `httpSeparateURI`
+- Checking if the printer came from "our own broadcast"
+- Checking the `resource` string starts with either `/printers/` or `/classes/`.
+- Build this new printer's `DNS-SD` service name.
+- **calls `examine_discovered_printer_record`!**
+
+Cool - let's follow the code and look at what this function does!
+
+## `examine_discovered_printer_record`
+
+- Checks if all required fields are populated
+- Calls `remove_bad_chars` to sanitize the URI - this could be worth a look, since it's a sanitizing function.
+- Performs numerous different parsing actions and checks for printer information
+- calls `create_remote_printer_entry` for a remote printer that has a unique URI (no local printer queue has the same URI).
+
+## `create_remote_printer_entry`
+
+- Checks all necessary fields are populated
+- Copy printer info from different fields
+- Perform different actions based on various scenarios. **However, the comment at [line 6785](https://github.com/OpenPrinting/cups-browsed/blob/2.0.1/daemon/cups-browsed.c#L14059)** looks interesting:
+
+```
+For a remote CUPS printer our local queue will be raw or get a
+PPD file from the remote CUPS server, so that the driver on the remote CUPS server gets used. So we will not generate a PPD file or interface script at this point.
+```
+
+So....if certain conditions are met when a remote printer is connected, then no need to generate a PPD file. 
+
+But that could mean that in other cases, a PDD file *will* be generated?
+
+At this point, it is time to get a bit more hands-on than code reviewing. Let's fire up an environment to test this out.
+
+## Hands-on lab environment set up!
+
+Download a VM image for Ubuntu 24.04 LTS - I downloaded one from [here](https://www.linuxvmimages.com/images/ubuntu-2404/)
+
+Check the version of `cups` and `cups-browsed`: 
+- for `cups`, open a browser and navigate to `http://localhost:631`. There are many other ways, of course.
+- for `cups-browsed`, use the following command: `cups-browsed --version` or `cups-browsed -v`
+
+For this VM image I downloaded, `cups` and `cups-browsed` are running by default, and the version of `cups-browsed` is `2.0.0`, which means it is vulnerable to RCE by default. Crazy.
+
+Oh yeah - remember to disconnect the VM from the internet. For obvious reasons.
+
+Configure a `host-only` network between my Windows host machine and the Ubuntu VM running the vulnerable machine. 
+
+We will then write a python script to imitate a remote IPP printer trying to connect to the `cups-browsed` service.
+
+Now double check if `cups-browsed` is running on UDP port 631 as expected:
+
+```
+ss -lnu 
+# we see here that the UDP port 631 is accepting connections on all interfaces.
+
+sudo lsof -i :631
+# this shows that *:631 is indeed used by cups-browsed
+```
+
+---
+
+
 
